Changes for 1.0.3.4

* Minor change to the Strong AI calculation of the strength of sea units near a territory (Kevin Moore)

* Fixed the connections or E/W Romania in NWO9 (ComradeKev)

* Added name_place.txt for NWO (ComradeKev)

* Updated rockets.png for Russians in NWO (ComradeKev)

* Fixed some connections in Europe.xml (ComradeKev)

* Added name_place.txt for Europe (ComradeKev)

* Fixed neutrals not able to be captured after a failed attempt (ComradeKev)

Changes for 1.0.3.3

* put game name in window title (sgb)

* fix bug 2753571 - Unloaded cargo not being removed when transport sinks, also odds calculator fails with transports in revised (sgb,  gruetzdark)

* fix bug 2779959 - AA50: Stay in the Mobilization Zone (sgb)

* fail when loading game where xml case and file name case differs (sgb)

* fix map name/unit case in nwo maps (sgb)

* mark territories with battles (sgb)

* Make it so map utility programs can find the centers, polygons, and map.properties files by using the
  path of the map's image file. (Stephen Wicklund)
  
* Make it so the user can specify the unit's scale when using the 'Auto Placement Finder' utility.(Stephen Wicklund)

* add a setting to "Lock" the map, so you can observe a game without the map moving all around (Stephen Wicklund)

* add  a setting to suppress the showing of battles between two AIs (Stephen Wicklund)

* add a setting to choose how long the AI pauses between each movement (Stephen Wicklund)

* add a better ai (Kevin Moore)

* limit number of units in one row of production panel to 8 (sgb)

*  The following list of bugs were fixed- primarily for AA50 (Comradekev)
	Fix the engine forcing the repair of at least 1 damage
	Amphib units taken as first casualties if partial retreat is possible
	Fix subs blocking naval bombardment
	Fix paratroop code (die with AA casualties, retreats, non-dependent in regular combat)
	Fix AARadar not inflicting casualties on aircraft
	Fix disappearing fighters on combined US/China turn